--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ main{
   height: 330px;
   width: 220px;
   padding: 15px;
-  background: black;
+  background: rgba(0, 0, 0, 0.9);
   border: 1px solid white;
   color: white;
   display: flex;
