--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ main{
   margin: 10px;
   height: 330px;
   width: 220px;
-  background-image: url('../img/howimetyourmother.jpg');
   background-size: cover;
   border-radius: 5px;
 }
@@ -54,9 +53,10 @@ main{
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   opacity: 0;
   transition: opacity .5s;
+  overflow-y: auto;
 }
 
 .informations:hover{
@@ -66,6 +66,37 @@ main{
 .informations:hover{
   cursor: pointer;
 }
+
+::-webkit-scrollbar{
+    width:5px;
+    height:0.8em;
+    background: black;
+}
+::-webkit-scrollbar:hover{
+    background-color: #eaeaea ;
+    border: none;
+}
+::-webkit-resizer{
+    -webkit-border-radius:4px;
+    background-color: #ccc;
+    border: none;
+}
+::-webkit-scrollbar-thumb{
+    min-height:0.8em;
+    min-width:0.8em;
+    -webkit-border-radius:4px;
+    background-color: #E40914;
+    border: none;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #D80067;
+    border: none;
+}
+::-webkit-scrollbar-thumb:active{
+    background-color:#990754;
+    border: none;
+}
+
 
 .movie-poster .spacing{
   margin: 5px 0;
