--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ main{
   height: 330px;
   width: 220px;
   padding: 15px;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.7);
   border: 1px solid white;
   color: white;
   display: flex;
@@ -68,33 +68,34 @@ main{
 }
 
 ::-webkit-scrollbar{
-    width:5px;
-    height:0.8em;
-    background: black;
+  width: 8px;
+  height:0.8em;
+  background: black;
 }
 ::-webkit-scrollbar:hover{
-    background-color: #eaeaea ;
-    border: none;
+  background-color: black;
+  border: none;
 }
 ::-webkit-resizer{
-    -webkit-border-radius:4px;
-    background-color: #ccc;
-    border: none;
+  -webkit-border-radius:4px;
+  background-color: #ccc;
+  border: none;
 }
 ::-webkit-scrollbar-thumb{
-    min-height:0.8em;
-    min-width:0.8em;
-    -webkit-border-radius:4px;
-    background-color: #E40914;
-    border: none;
+  min-height:0.8em;
+  min-width:0.8em;
+  -webkit-border-radius:4px;
+  background-color: #E40914;
+  border: none;
 }
 ::-webkit-scrollbar-thumb:hover{
-    background-color: #D80067;
-    border: none;
+  background-color: #dc341c;
+  border: none;
 }
 ::-webkit-scrollbar-thumb:active{
-    background-color:#990754;
-    border: none;
+  background-color:#990754;
+  cursor: pointer;
+  border: none;
 }
 
 
